--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "author": "Andreas Kollegger",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
+    "@babel/preset-typescript": "^7.15.0",
+    "@types/jest": "^27.0.0",
+    "babel-jest": "^27.0.6",
     "jest": "^27.0.6"
   },
   "dependencies": {
