--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jest": "^27.0.6"
   },
   "dependencies": {
-    "neo4j-driver": "^4.3.2"
+    "neo4j-driver": "^4.3.2",
+    "neo4j-driver-core": "^4.3.2"
   }
 }
